<resources>
    <string name="app_name">PTCM</string>
    <string name="login_success">Successful Login</string>
    <string name="login_failure">Login Failed</string>
    <string name="username">jdoe</string>
    <string name="password">welcome1</string>

    <!-- Strings related to login (default stuff they gave) -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="new_customer">New Customer</string>

    <!-- Main Menu -->
    <string name="customer_name">temp name</string>
    <string name="customer_progress">number / number</string>

    <!--New Customer-->
    <string name="picture_customer">Customer\'s Picture</string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_dateofbirth">D.O.B.</string>
    <string name="action_picture">Take Picture</string>
    <string name="prompt_sessions">Sessions</string>
    <string name="prompt_credit">Card Number</string>
    <string name="prompt_month">Month</string>
    <string name="prompt_year">Year</string>
    <string name="prompt_security">CVC</string>
    <string name="prompt_address1">Address 1</string>
    <string name="prompt_address2">Address 2</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_zipcode">Zip Code</string>
    <string name="action_create">Create New Customer</string>


    <!-- Receipt-->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="prompt_description">Description of Session</string>
    <string name="prompt_cost">Total Cost</string>
    <string name="action_print">Print</string>
    <string name="action_email">Email</string>
    <string name="action_return">Return</string>

    <!-- New Session -->
    <string name="action_session">Create Session</string>

    <!-- Payment -->
    <string name="action_payment">Confirm Payment</string>

    <!-- Session -->
    <string name="session_description">Description</string>
    <string name="session_complete">Completed</string>
    <string name="action_create_session">New Session</string>
    <string name="session_signature">Sign Here</string>
    <string name="session_confirm">Confirm</string>
    <string name="title_activity_options">options</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_log">Log Off</string>
</resources>
