<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCustomer">

    <fragment
        android:id="@+id/newCustomerFragment"
        android:name="com.bignerdranch.android.personaltrainercustomermanagementapplication.username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_username" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText8"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-222dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/picture_customer"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/custFirst"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/prompt_first" />

                <EditText
                    android:id="@+id/custLast"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/prompt_last" />

                <EditText
                    android:id="@+id/custDOB"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/prompt_dateofbirth" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/takePicture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="takePictureButton"
                android:text="@string/action_picture" />

            <EditText
                android:id="@+id/custSessions"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/prompt_sessions" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prompt_credit" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/editText12"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/custCardMonth"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_month" />

        <EditText
            android:id="@+id/custCardYear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_year" />

        <EditText
            android:id="@+id/custSecurity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_security" />
    </TableRow>

    <EditText
        android:id="@+id/editText12"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/custAddress2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prompt_address1" />

    <EditText
        android:id="@+id/custAddress2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prompt_address2" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/custCity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_city" />

        <EditText
            android:id="@+id/custState"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_state" />

        <EditText
            android:id="@+id/custZip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prompt_zipcode" />
    </TableRow>

    <Button
        android:id="@+id/custCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:onClick="createCustomerButton"
        android:text="@string/action_create" />

</RelativeLayout>