<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reciept">

    <fragment
        android:id="@+id/receiptFragment"
        android:name="com.bignerdranch.android.personaltrainercustomermanagementapplication.username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_username" />

    <Button
        android:id="@+id/mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:text="@string/action_return" />

    <Button
        android:id="@+id/receiptEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/action_email" />

    <Button
        android:id="@+id/receiptPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/receiptEmail"
        android:text="@string/action_print" />

    <EditText
        android:id="@+id/sessionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/receiptEmail"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/prompt_description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/receiptCost"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/prompt_cost"
        android:inputType="numberDecimal" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_above="@+id/sessionDescription"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/receiptDate"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/receiptTime"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/time"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/receiptName"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textAlignment="center" />

    </TableRow>

</RelativeLayout>