<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.bignerdranch.android.personaltrainercustomermanagementapplication.username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_username" />

    <Button
        android:id="@+id/newCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newCustomerButton"
        android:text="@string/new_customer" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        //learn how to make this dynamic
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/customerPhoto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="customerSession"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/customerName1"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:text="@string/customer_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/customerProgress1"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/customer_progress"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/customerPhoto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="customerSession"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/customerName2"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:text="@string/customer_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/customerProgress2"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/customer_progress"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/customerPhoto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="customerSession"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/customerName3"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:text="@string/customer_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/customerProgress3"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/customer_progress"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <ImageButton
                android:id="@+id/customerPhoto4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="customerSession"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/customerName4"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:text="@string/customer_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/customerProgress4"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/customer_progress"
                android:textAlignment="center"/>
        </TableRow>
    </TableLayout>

</LinearLayout>